[JBWS-2568] Removing 4.2.4 support