@@ -316,46 +316,6 @@
     </profile>
 
     <!--
-    Name:  jboss424
-    Descr: JBoss-4.2.4 specific options
-    -->
-    <profile>
-      <id>jboss424</id>
-      <properties>
-        <jboss.version>4.2.4-SNAPSHOT</jboss.version>
-        <jbossws.integration.target>jboss424</jbossws.integration.target>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.client</groupId>
-          <artifactId>jbossall-client</artifactId>
-          <version>${jboss.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.ws</groupId>
-          <artifactId>jbossws-jboss424x</artifactId>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <!-- http://jira.codehaus.org/browse/MCOMPILER-72 -->
-              <testExcludeFile>../test-excludes-jboss424.txt</testExcludeFile>
-            </configuration>
-          </plugin>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>${surefire.jvm.args} -Djava.endorsed.dirs=${jboss424.home}/lib/endorsed</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!--
     Name:  jboss500
     Descr: JBoss-5.0.0 specific options
     -->
